2007-06-15 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-status-icon.c:
	* libempathy-gtk/gossip-presence-chooser.c:
	* libempathy-gtk/gossip-presence-chooser.h:
	* libempathy/empathy-idle.c:
	* libempathy/empathy-idle.h: Prepare for slack time when coming back
	from auto away. Not yet fully implemented.

2007-06-14 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-images.h:
	* libempathy-gtk/gossip-chat.c: Use gtk-info for contact informaiton.

	* data/22x22/empathy-proto-salut.png:
	* data/22x22/Makefile.am:
	* data/16x16/empathy-proto-salut.png:
	* data/16x16/Makefile.am:
	* data/scalable/empathy-proto-salut.svg:
	* data/scalable/Makefile.am:
	* data/salut.profile: Add salut icon. Fixes bug #447659 (Michael Monreal).

2007-06-14 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-contact-list-view.c: Show logs when right
	click on a contact in the roster.

2007-06-14 Xavier Claessens  <xclaesse@gmail.com>

	* src/org.gnome.Empathy.Chat.service.in:
	* src/empathy-accounts.c:
	* src/empathy-accounts-main.c:
	* src/empathy-chat-main.c:
	* src/empathy.c:
	* src/Makefile.am:
	* src/empathy-main.c:
	* libempathy/gossip-chatroom-manager.c:
	* autogen.sh: Empathy is no more splitted into 2 processes. It makes
	debugging more difficult when emmpathy-chat crashes. It's also more
	optimised like that since contact objects can be shared.

2007-06-14 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-chat-window.c: Disconnect signals from
	chatroom_manager. Fixes bug #447178.

2007-06-14 Xavier Claessens  <xclaesse@gmail.com>

	* po/POTFILES.in:
	* po/POTFILES.skip: Get strings in empathy.desktop.in.in and skip
	empathy.desktop.in. Fixes bug #446161.

2007-06-14 Xavier Claessens  <xclaesse@gmail.com>

	* po/POTFILES.in: Adding missing files.

2007-06-14 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/gossip-log-window.c:
	* libempathy-gtk/gossip-chat-window.c:
	* libempathy/empathy-log-manager.c: