@@ -1,5 +1,10 @@
 2007-06-15 Xavier Claessens  <xclaesse@gmail.com>
 
+	* src/empathy.c:
+	* libempathy/empathy-idle.c: Adding NetworkManager support.
+
+2007-06-15 Xavier Claessens  <xclaesse@gmail.com>
+
 	* libempathy-gtk/empathy-status-icon.c:
 	* libempathy-gtk/gossip-presence-chooser.c:
 	* libempathy-gtk/gossip-presence-chooser.h:
